--- a/JsonPath/JsonPath.nuspec
+++ b/JsonPath/JsonPath.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
     <title>JsonPath</title>
     <authors>Heiner Wolf</authors>
     <owners>Heiner Wolf</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>JsonPath Class Library: Inspect values in JSON strings with single line expressions and plain old CLR objects without using foreach/if to extract values from JSON. Extract the 42 from ["first","second",{"aString":"HelloWorld","aNumber":42}] with C# expression: json[2]["aNumber"]</description>
+    <description>JsonPath Class Library: Extract values from JSON data with single line expressions and plain old CLR objects without using foreach/if. Extract the 42 from ["1st","2nd",{"aString":"HelloWorld","aNumber":42}] with C# expression: json[2]["aNumber"]</description>
     <releaseNotes>New</releaseNotes>
     <projectUrl>https://github.com/wolfspelz/JsonPath</projectUrl>
     <copyright>Copyright 2016</copyright>
