--- a/JsonPath/JsonPath.csproj
+++ b/JsonPath/JsonPath.csproj
@@ -4,10 +4,30 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- NuGet Package Properties -->
+    <PackageId>JsonPath</PackageId>
+    <Version>2.0.0</Version>
+    <Authors>wolfspelz</Authors>
+    <Company>wolfspelz</Company>
+    <Product>JsonPath</Product>
+    <Description>A .NET library for extracting values from JSON with simple expressions, similar to XPath for XML but type-safe. Supports JSON and XML parsing with intuitive syntax like json[2]["aNumber"] and LINQ integration.</Description>
+    <PackageTags>json;xml;path;query;parser;xpath;linq;JSON Parser;JsonPath;XPath;POCO</PackageTags>
+    <PackageProjectUrl>https://github.com/wolfspelz/JsonPath</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/wolfspelz/JsonPath</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
